# Mokud

./: .gitmodules  LICENSE  README.md  json  meson.build
src/: mokud.cpp
